[gd_scene load_steps=7 format=3 uid="uid://b2up65n2yxpfh"]

[ext_resource type="Script" path="res://Resources/Scripts/OptionsMenu.gd" id="1_h3xm1"]
[ext_resource type="Theme" uid="uid://ctf2sqighxluy" path="res://Resources/Themes/MainMenu.tres" id="2_dgdw5"]
[ext_resource type="Theme" uid="uid://dmg5015od7xq4" path="res://Resources/Themes/PauseMenu.theme" id="2_dy31d"]
[ext_resource type="Shader" path="res://Resources/Shaders/Overlay.gdshader" id="4_wv2tv"]

[sub_resource type="LabelSettings" id="LabelSettings_ixwgr"]
font_size = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nub3h"]
shader = ExtResource("4_wv2tv")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(426, 320)
shader_parameter/pixelate = true
shader_parameter/brightness = 1.4

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_h3xm1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dy31d")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 75

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer2/Title"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
bbcode_enabled = true
text = "[center][color=#C81D25]Options"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/VBoxContainer/Back"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
text = "Back To Menu"

[node name="Options" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/VBoxContainer/Options"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
item_count = 2
selected = 1
popup/item_0/text = "Dev Utilities"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1

[node name="DevOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Row1" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions"]
clip_contents = true
layout_mode = 2
alignment = 1

[node name="FPSCounterCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/FPSCounterCollection"]
layout_mode = 2

[node name="FpsCounter" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/FPSCounterCollection/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/FPSCounterCollection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/FPSCounterCollection/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "FPS Counter"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerInfoCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/PlayerInfoCollection"]
layout_mode = 2

[node name="PlayerInfo" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/PlayerInfoCollection/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/PlayerInfoCollection/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/PlayerInfoCollection/HBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Player Location Info"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Row2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions"]
layout_mode = 2

[node name="CurrentBlockCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection"]
layout_mode = 2

[node name="CurrentBlock" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Current Block Info"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentBlockCollection2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection2"]
layout_mode = 2

[node name="HoveringBlock" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection2/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Block Hovering Info"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Row3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions"]
layout_mode = 2

[node name="CurrentEventCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentEventCollection"]
layout_mode = 2

[node name="CurrentEvent" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentEventCollection/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentEventCollection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentEventCollection/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Current Event Info"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentTimeCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentTimeCollection"]
layout_mode = 2

[node name="CurrentTime" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentTimeCollection/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentTimeCollection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentTimeCollection/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Current Time Info"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Row4" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions"]
layout_mode = 2

[node name="CurrentRoomCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row4/CurrentRoomCollection"]
layout_mode = 2

[node name="CurrentRoom" type="Button" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row4/CurrentRoomCollection/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_dgdw5")
theme_override_colors/font_color = Color(0, 0, 0, 0)
toggle_mode = true
text = "  X  "

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row4/CurrentRoomCollection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row4/CurrentRoomCollection/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Current Event Info"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NormalOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions"]
layout_mode = 2

[node name="CurrentBlockCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Master Volume:"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentBlockCollection2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
min_value = -80.0
max_value = 2.08165e-12
tick_count = 60
ticks_on_borders = true

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions"]
layout_mode = 2

[node name="CurrentBlockCollection" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Music Volume:"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentBlockCollection2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
min_value = -60.0
max_value = 2.08165e-12
tick_count = 15
ticks_on_borders = true

[node name="MasterVolume2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions"]
layout_mode = 2

[node name="Label" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume2/Label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume2/Label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_dgdw5")
text = "Resolution:"
label_settings = SubResource("LabelSettings_ixwgr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resolution" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dgdw5")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 0

[node name="ResolutionButton" type="OptionButton" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume2/Resolution"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_dgdw5")
item_count = 4
selected = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 3
popup/item_1/text = "1600x900"
popup/item_1/id = 2
popup/item_2/text = "1280x720"
popup/item_2/id = 1
popup/item_3/text = "1024x546"
popup/item_3/id = 0

[node name="Overlay" type="Panel" parent="."]
material = SubResource("ShaderMaterial_nub3h")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="button_up" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/VBoxContainer/Back/MainMenu" to="." method="_on_main_menu_button_up"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/VBoxContainer/Options/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/FPSCounterCollection/HBoxContainer/FpsCounter" to="." method="_on_fps_counter_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row1/PlayerInfoCollection/HBoxContainer2/PlayerInfo" to="." method="_on_player_info_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection/HBoxContainer/CurrentBlock" to="." method="_on_current_block_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row2/CurrentBlockCollection2/HBoxContainer/HoveringBlock" to="." method="_on_hovering_block_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentEventCollection/HBoxContainer/CurrentEvent" to="." method="_on_current_event_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row3/CurrentTimeCollection/HBoxContainer/CurrentTime" to="." method="_on_current_time_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/DevOptions/Row4/CurrentRoomCollection/HBoxContainer/CurrentRoom" to="." method="_on_current_room_toggled"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection2/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="drag_started" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection2/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_started"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume/CurrentBlockCollection2/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection2/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="drag_started" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection2/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_started"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MusicVolume/CurrentBlockCollection2/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/NormalOptions/MasterVolume2/Resolution/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
